--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -13,7 +13,7 @@
         <p>First Name: <input name="first_name"></p>
         <p>Last Name: <input name="last_name"></p>
         <p>Image URL: <input name="image_url"></p>
-        <a href="/{{ user.id }}"> Submit </a>
+        <a href="/users"> Submit </a>
     </form>
 </body>
 
