--- a/templates/list.html
+++ b/templates/list.html
@@ -18,7 +18,7 @@
             {% endfor %}
         </ul>
 
-        <a href="/add-user">Add User</a>
+        <a href="/users/new">Add User</a>
     </form>
 </body>
 
