--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -9,7 +9,7 @@
 
 <body>
     <h2>Add User</h2>
-    <form method="POST" method="GET" action="/{{ user.id }}">
+    <form method="POST" action="/{{ user.id }}">
         <p>First Name: <input name="first_name"></p>
         <p>Last Name: <input name="last_name"></p>
         <p>Image URL: <input name="image_url"></p>
