--- a/templates/list.html
+++ b/templates/list.html
@@ -17,7 +17,13 @@
             <li><a href="/{{ user.id }}">{{ user.first_name }}</a></li>
             {% endfor %}
         </ul>
-
+        <h2>Add User</h2>
+        <form method="POST">
+            <p>First Name: <input name="first_name"></p>
+            <p>Last Name: <input name="last_name"></p>
+            <p>Image URL: <input name="image_url"></p>
+            <a href="/users"> Submit </a>
+        </form>
         <a href="/users/new">Add User</a>
     </form>
 </body>
