--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,4 +1,20 @@
-<h1>{{ user.first_name }}</h1>
-{{user.last_name}}
-{{user.image_url}}
-<a href="/users">Go back</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>User Details</title>
+</head>
+
+<body>
+    <h1>{{ user.first_name }}</h1>
+    <p>Last name: {{user.last_name}}</p>
+    <p>Image: {{user.image_url}}</p>
+    <p><a href="/{{user.id}}/edit">Edit User</a></p>
+    <p><a href="/{{user.id}}/delete">Delete User</a></p>
+    <p>
+        <a href="/users">Go back</a></p>
+</body>
+
+</html>
