--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Details</title>
 </head>
+{% block content %}
 
-<body>
-    <h1>{{ user.first_name }}</h1>
-    <p>Last name: {{user.last_name}}</p>
-    <p>Image: {{user.image_url}}</p>
-    <p><a href="/{{user.id}}/edit">Edit User</a></p>
-    <p><a href="/{{user.id}}/delete">Delete User</a></p>
-    <p>
-        <a href="/users">Go back</a></p>
-</body>
 
-</html>
+<h1>{{ user.first_name }}</h1>
+<p>Last name: {{user.last_name}}</p>
+{% if user.image_url %}
+<div class="col-sm-2 col-6">
+    <img src="{{ user.image_url }}" alt="{{ user.full_name }}" class="img-fluid">
+</div>
+{% endif %}
+<p><a href="/{{user.id}}/edit">Edit User</a></p>
+<p><a href="/{{user.id}}/delete">Delete User</a></p>
+<p>
+    <a href="/users">Go back</a></p>
+
+{% endblock %}
