--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
 <head>
     <meta charset="UTF-8">
@@ -7,13 +6,11 @@
     <title>Edit USer</title>
 </head>
 
-<body>
-    <form method="POST">
-        <p>First Name: <input name="first_name"></p>
-        <p>Last Name: <input name="last_name"></p>
-        <p>Image URL: <input name="image_url"></p>
-    </form>
-    <a href="/users">submit</a>
-</body>
-
-</html>
+{% block content %}
+<form method="POST">
+    <p>First Name: <input name="first_name"></p>
+    <p>Last Name: <input name="last_name"></p>
+    <p>Image URL: <input name="image_url"></p>
+</form>
+<a href="/users">submit</a>
+{% endblock %}
