--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -10,7 +10,7 @@
 
 
 <h2>Add User</h2>
-<form method="POST" action="/{{ user.id }}">
+<form method="POST">
     <p>First Name: <input name="first_name"></p>
     <p>Last Name: <input name="last_name"></p>
     <p>Image URL: <input name="image_url"></p>
