--- a/templates/list.html
+++ b/templates/list.html
@@ -15,12 +15,12 @@
         <li><a href="/{{ user.id }}">{{ user.first_name }}</a></li>
         {% endfor %}
     </ul>
-    <h2>Add User</h2>
+    <!-- <h2>Add User</h2>
     <form method="POST">
         <p>First Name: <input name="first_name"></p>
         <p>Last Name: <input name="last_name"></p>
         <p>Image URL: <input name="image_url"></p>
-    </form>
+    </form> -->
     <a href="/users/new">Add User</a>
 </form>
 {% endblock %}
