--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -14,7 +14,7 @@
     <p>First Name: <input name="first_name"></p>
     <p>Last Name: <input name="last_name"></p>
     <p>Image URL: <input name="image_url"></p>
-    <a href="/users"> Submit </a>
+    <input type="submit">
 </form>
-
+<a href="/users"> Go back</a>
 {% endblock %}
