--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,6 +11,7 @@
     <p>First Name: <input name="first_name"></p>
     <p>Last Name: <input name="last_name"></p>
     <p>Image URL: <input name="image_url"></p>
+    <input type="submit">
 </form>
 <a href="/users">submit</a>
 {% endblock %}
