--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,14 +18,15 @@
 <p><a href="/{{user.id}}/edit">Edit User</a></p>
 <p><a href="/{{user.id}}/delete">Delete User</a></p>
 
-<form id="form1" nethod="post" action="/{{user.id}}/posts/new">
+<form id="form1" method="post" action="/{{user.id}}/posts/new">
     <p>
         <h2>Posts</h2>
         {% for post in posts %}
         <li><a href="/{{ post.id }}">{{ post.title }}</a></li>
         {% endfor %}
         <button type="submit">add post</button>
-        <a href="/users">Go back</a>
-    </p>
 </form>
+<a href="/users">Go back</a>
+</p>
+
 {% endblock %}
