--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,11 +18,11 @@
 <p><a href="/{{user.id}}/edit">Edit User</a></p>
 <p><a href="/{{user.id}}/delete">Delete User</a></p>
 
-<form id="form1" method="post" action="/{{user.id}}/posts/new">
+<form id="form1" method="get" action="/posts/{{user.id}}">
     <p>
         <h2>Posts</h2>
         {% for post in posts %}
-        <li><a href="/{{ post.id }}">{{ post.title }}</a></li>
+        <li><a href="/posts/{{ post.id }}">{{ post.title }}</a></li>
         {% endfor %}
         <button type="submit">add post</button>
 </form>
