--- a/templates/post.html
+++ b/templates/post.html
@@ -4,4 +4,5 @@
 Title {{post.title}}
 Content {{post.content}}
 <p><a href="/posts/{{post.id}}/delete">Delete Post</a></p>
+<p><a href="/posts/{{post.id}}/edit">Edit Post</a></p>
 {% endblock %}
