--- a/templates/edit-post.html
+++ b/templates/edit-post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2>Edit Post for {{user.first_name}}</h2>
+<h2>Edit Post</h2>
 <form method="POST">
     <p>Title <input name="title"></p>
     <p>Content: <input name="content"></p>
