--- a/templates/detail.html
+++ b/templates/detail.html
@@ -28,7 +28,7 @@
         </h2>
         <p>{{ post.content }}</p>
         <p>
-            <small>By {{ post.user.full_name }}</small>
+            <small>By {{ post.user.first_name }}</small>
         </p>
         {% endfor %}
 
